--- a/InstagramApp/New Group/NewPost.storyboard
+++ b/InstagramApp/New Group/NewPost.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,16 +17,177 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PRr-HD-T9W">
+                                <rect key="frame" x="0.0" y="753" width="393" height="65"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="BGS-VK-htZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="65"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mys-F7-BXb">
+                                                <rect key="frame" x="0.0" y="0.0" width="196.66666666666666" height="65"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Library">
+                                                    <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="16"/>
+                                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="libraryButtonDidTouch:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="AK7-yw-EAn"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bqo-MA-7NY">
+                                                <rect key="frame" x="196.66666666666663" y="0.0" width="196.33333333333337" height="65"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Photo">
+                                                    <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="16"/>
+                                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="photoButtonDidTouch:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="8OZ-ai-gQN"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="BGS-VK-htZ" firstAttribute="leading" secondItem="PRr-HD-T9W" secondAttribute="leading" id="1aH-xM-EzP"/>
+                                    <constraint firstItem="BGS-VK-htZ" firstAttribute="top" secondItem="PRr-HD-T9W" secondAttribute="top" id="QiW-yJ-JoD"/>
+                                    <constraint firstAttribute="trailing" secondItem="BGS-VK-htZ" secondAttribute="trailing" id="W87-Bu-cRd"/>
+                                    <constraint firstAttribute="height" constant="65" id="eX0-jk-boe"/>
+                                    <constraint firstAttribute="bottom" secondItem="BGS-VK-htZ" secondAttribute="bottom" id="njz-3X-7y3"/>
+                                </constraints>
+                            </view>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f9m-kA-jE1">
+                                <rect key="frame" x="0.0" y="59" width="393" height="694"/>
+                                <connections>
+                                    <segue destination="Poe-wm-5fu" kind="embed" id="Mhw-fQ-PAQ"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="PRr-HD-T9W" secondAttribute="bottom" id="6aQ-U7-XLw"/>
+                            <constraint firstItem="PRr-HD-T9W" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="FiH-ai-Kpm"/>
+                            <constraint firstItem="f9m-kA-jE1" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Je6-Dr-cna"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="f9m-kA-jE1" secondAttribute="trailing" id="a8x-qt-lID"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="PRr-HD-T9W" secondAttribute="trailing" id="bLr-Ji-wwq"/>
+                            <constraint firstItem="f9m-kA-jE1" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="cpd-QS-t7G"/>
+                            <constraint firstItem="PRr-HD-T9W" firstAttribute="top" secondItem="f9m-kA-jE1" secondAttribute="bottom" id="rsc-qa-U0B"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="48" y="-2"/>
+            <point key="canvasLocation" x="46.564885496183201" y="-2.1126760563380285"/>
+        </scene>
+        <!--New Post Page View Controller-->
+        <scene sceneID="dBl-5U-99P">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Poe-wm-5fu" customClass="NewPostPageViewController" customModule="InstagramApp" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SVy-Hc-4id" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="801" y="-2"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1Qj-2A-w87">
+            <objects>
+                <viewController storyboardIdentifier="PhotoLiberaryVC" id="Ufz-4G-HhG" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Q0X-G0-bF9">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="IAR-MK-LDO">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Wsn-sO-Ucd">
+                                    <size key="itemSize" width="193" height="179"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="RLC-85-mut">
+                                        <rect key="frame" x="100" y="0.0" width="193" height="179"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="K0s-eh-6te">
+                                            <rect key="frame" x="0.0" y="0.0" width="193" height="179"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xPc-2V-1tz">
+                                                    <rect key="frame" x="0.0" y="0.0" width="193" height="179"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="xPc-2V-1tz" firstAttribute="leading" secondItem="K0s-eh-6te" secondAttribute="leading" id="4UT-E6-Fn1"/>
+                                                <constraint firstAttribute="bottom" secondItem="xPc-2V-1tz" secondAttribute="bottom" id="eS9-PA-tKS"/>
+                                                <constraint firstItem="xPc-2V-1tz" firstAttribute="top" secondItem="K0s-eh-6te" secondAttribute="top" id="ltl-FZ-4gh"/>
+                                                <constraint firstAttribute="trailing" secondItem="xPc-2V-1tz" secondAttribute="trailing" id="zsn-5J-5Al"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="193" height="179"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mw3-Ox-X7a"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="IAR-MK-LDO" firstAttribute="leading" secondItem="mw3-Ox-X7a" secondAttribute="leading" id="B7Y-M7-Sgx"/>
+                            <constraint firstItem="mw3-Ox-X7a" firstAttribute="trailing" secondItem="IAR-MK-LDO" secondAttribute="trailing" id="Zms-ku-uro"/>
+                            <constraint firstItem="mw3-Ox-X7a" firstAttribute="bottom" secondItem="IAR-MK-LDO" secondAttribute="bottom" id="l9o-MM-q3x"/>
+                            <constraint firstItem="IAR-MK-LDO" firstAttribute="top" secondItem="mw3-Ox-X7a" secondAttribute="top" id="xQe-ns-9vV"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S88-La-UL1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1493.8931297709923" y="53.521126760563384"/>
+        </scene>
+        <!--Camera View Controller-->
+        <scene sceneID="Owo-Jh-kba">
+            <objects>
+                <viewController storyboardIdentifier="CameraVC" id="P7B-OE-Cnd" customClass="CameraViewController" customModule="InstagramApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Pru-lk-DQn">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Qz-4b-lSd">
+                                <rect key="frame" x="161.66666666666666" y="708" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="UES-VT-ibU"/>
+                                    <constraint firstAttribute="width" constant="70" id="uCB-WD-FDY"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="camera_capture_icon"/>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Azd-7F-4hu" customClass="SimpleCameraView" customModule="InstagramApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="59" width="393" height="393"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Azd-7F-4hu" secondAttribute="height" multiplier="1:1" id="bDS-2y-Ktg"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="SPd-RT-6Mu"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="SPd-RT-6Mu" firstAttribute="trailing" secondItem="Azd-7F-4hu" secondAttribute="trailing" id="MlM-oW-jkT"/>
+                            <constraint firstItem="SPd-RT-6Mu" firstAttribute="bottom" secondItem="3Qz-4b-lSd" secondAttribute="bottom" constant="40" id="Pn1-w9-WHp"/>
+                            <constraint firstItem="Azd-7F-4hu" firstAttribute="top" secondItem="SPd-RT-6Mu" secondAttribute="top" id="e8F-4C-ZgJ"/>
+                            <constraint firstItem="Azd-7F-4hu" firstAttribute="leading" secondItem="SPd-RT-6Mu" secondAttribute="leading" id="mAa-VE-oDV"/>
+                            <constraint firstItem="3Qz-4b-lSd" firstAttribute="centerX" secondItem="Pru-lk-DQn" secondAttribute="centerX" id="tba-MO-vyB"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9c9-4h-OFM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2218" y="54"/>
         </scene>
     </scenes>
     <resources>
+        <image name="camera_capture_icon" width="70" height="70"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
