--- a/InstagramApp/New Group/Search.storyboard
+++ b/InstagramApp/New Group/Search.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,13 +17,54 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ENI-8o-mBk">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewLayout key="collectionViewLayout" id="SAu-g7-rrE" customClass="CollectionLayout" customModule="InstagramApp" customModuleProvider="target"/>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ExploreCollectionViewCell" id="Yfy-wg-LBm" customClass="ExploreCollectionViewCell" customModule="InstagramApp" customModuleProvider="target">
+                                        <rect key="frame" x="85" y="0.0" width="223" height="206"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8Qd-dT-s2o">
+                                            <rect key="frame" x="0.0" y="0.0" width="223" height="206"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Bm7-0M-i7X">
+                                                    <rect key="frame" x="0.0" y="0.0" width="223" height="206"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Bm7-0M-i7X" firstAttribute="leading" secondItem="8Qd-dT-s2o" secondAttribute="leading" id="9gg-tS-fwV"/>
+                                                <constraint firstAttribute="trailing" secondItem="Bm7-0M-i7X" secondAttribute="trailing" id="PH2-nV-eqq"/>
+                                                <constraint firstItem="Bm7-0M-i7X" firstAttribute="top" secondItem="8Qd-dT-s2o" secondAttribute="top" id="XU3-sl-Tz3"/>
+                                                <constraint firstAttribute="bottom" secondItem="Bm7-0M-i7X" secondAttribute="bottom" id="nRA-In-uW2"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="223" height="206"/>
+                                        <connections>
+                                            <outlet property="exploreImage" destination="Bm7-0M-i7X" id="tFh-wX-jeM"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="ENI-8o-mBk" secondAttribute="trailing" id="TB0-d7-DDj"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="ENI-8o-mBk" secondAttribute="bottom" id="cyN-Ie-x13"/>
+                            <constraint firstItem="ENI-8o-mBk" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="k7f-9N-XB8"/>
+                            <constraint firstItem="ENI-8o-mBk" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="qbl-4h-u1C"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="ENI-8o-mBk" id="s8W-0K-0ZW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="48" y="-2"/>
+            <point key="canvasLocation" x="46.564885496183201" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
